# ocr_dhn_sdk

./: README.md  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset  package_graph.json
.dart_tool/extension_discovery/: devtools.json
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/assets/: README.md
android/src/main/cpp/: CMakeLists.txt  paddle_ocr_jni.cpp
android/src/main/kotlin/com/example/water_meter_sdk/: OCRPipeline.kt  WaterMeterProcessor.kt  WaterMeterSdkPlugin.kt
android/src/test/kotlin/com/example/water_meter_sdk/: WaterMeterSdkPluginTest.kt
example/: README.md  pubspec.yaml
example/android/: gradle.properties
example/android/app/: build.gradle  proguard-rules.pro
example/android/app/src/main/: AndroidManifest.xml
example/assets/models/: model.onnx
example/integration_test/: plugin_integration_test.dart
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: Podfile  water_meter_sdk.podspec
ios/Classes/: WaterMeterSdkPlugin.swift
ios/Classes/Models/: README.md
lib/: water_meter_sdk.dart  water_meter_sdk_method_channel.dart  water_meter_sdk_platform_interface.dart
lib/api/: get_number_ocr.dart
lib/models/: water_meter_result.dart
lib/services/: water_meter_ocr_service.dart  water_meter_ocr_service_tf_lite.dart
test/: water_meter_sdk_method_channel_test.dart  water_meter_sdk_test.dart
(+1 files in other folders)
